update: Button links and overflow issues on index.html

--- a/assets/css/observer.css
+++ b/assets/css/observer.css
@@ -2,7 +2,7 @@
     opacity: 0;
     height: 75%;
     width: 65%;
-    margin-left: 1250px;
+    margin-left: 800px;
     transition: opacity 1.2s ease-in, margin-left 0.5s ease-in;
 }
 .image.visible {
